LS - alert (dati mappa)

--- a/PortaleGeo/Views/SistemaHere/Index.cshtml
+++ b/PortaleGeo/Views/SistemaHere/Index.cshtml
@@ -231,7 +231,7 @@
                                                         localStorage.setItem(nome, myArray[i]);
 
                                                     }
-
+                                                    alert("Dati caricati in Mappa con successo");
 
                                                 },
 
