--- a/PortaleGeo/Views/Home/Upload.cshtml
+++ b/PortaleGeo/Views/Home/Upload.cshtml
@@ -56,7 +56,7 @@
 
     if (Model != null)
         {
-        <table id="DatiCsv">
+        <table id="DatiCsv" data-page-length='25'>
             <thead>
                 <tr>
                     @foreach (DataColumn col in Model.Columns)
@@ -95,8 +95,7 @@
             $("#DatiCsv").DataTable({
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.10.15/i18n/Italian.json'
-                },
-              
+                },         
                 paging: true,
                 scrollX: true,
                 scrollY: 400,
@@ -118,7 +117,7 @@
             
                  
             });
-      
+        
   
 
         </script>
