--- a/PortaleGeo/Views/Shared/_Layout.cshtml
+++ b/PortaleGeo/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
 
 </head>
 <body>
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary" >
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <a class="navbar-brand" href="/">HOME</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,23 +24,24 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
 
-             
+
                 @if (this.User.IsInRole("Administrators") || this.User.IsInRole("EnteLocale") || this.User.IsInRole("Fornitore"))
                 {
 
-            <li class="nav-item">
-                <a class="nav-link" href="/Home/Upload">Visualizza File</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/Upload">Visualizza File</a>
+                    </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Home/SelezionaSistema">Seleziona Sistema</a>
-                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="/Home/Mappa">Visualizza Mappa</a>
-                                            </li>
-                                                            <li class="nav-item">
-                                                                <img src="/Images/609px-Map_of_region_of_Marche,_Italy,_with_provinces-it.svg.png" height="50" alt="" loading="lazy" id="Marche" class="rounded-circle" />
-                                                            </li>}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/SelezionaSistema">Seleziona Sistema</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Home/Mappa">Visualizza Mappa</a>
+                    </li>
+                    <li class="nav-item">
+                        <img src="/Images/609px-Map_of_region_of_Marche,_Italy,_with_provinces-it.svg.png" height="50" alt="" loading="lazy" id="Marche" class="rounded-circle" />
+                    </li>
+}
             </ul>
         </div>
         <div class="nav navbar-nav navbar-right">
@@ -52,7 +53,7 @@
         </div>
     </nav>
     <style>
-       
+
         .navbar-nav.navbar-right {
             transform: translate(-50%);
         }
@@ -79,7 +80,7 @@
     @Scripts.Render("~/bundles/jquery")
     <!--Import jQuery before export.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
     <!--Data Table-->
     <script type="text/javascript" src=" https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
