LS - Log, webconfig , grafiche

--- a/PortaleGeo/Views/Google/Index.cshtml
+++ b/PortaleGeo/Views/Google/Index.cshtml
@@ -1,16 +1,14 @@
-﻿@{
-    ViewBag.Title = "Informazioni";
+﻿
+@{
+    ViewBag.Title = "Index";
 }
-@*<h2>@ViewBag.Title</h2>*@
 
 <h3>In fase di sviluppo...</h3>
 <img class="rounded-circle" src="~/Images/infasedisviluppo.png" height="400" translate="yes" id="immagine" />
 
 <style>
-    #immagine{
-        transform:translate(40%) 
+    #immagine {
+        transform: translate(40%)
     }
 </style>
-
-
 
