--- a/PortaleGeo/Views/Home/Index.cshtml
+++ b/PortaleGeo/Views/Home/Index.cshtml
@@ -28,16 +28,38 @@
     <title>Portale Di Geocodifica</title>
 </head>
 <body>
+    <br />
+    <h1>GeoCode</h1>
+    <br />
+    <p class="lead">Portale per la georeferenzazione</p>
     <div class="jumbotron">
-        <img width="400" height="200" src="/Images/geocoding_02.png">
-        <br/>
-        <h1>GeoCode</h1>
-        <br />
-        <p class="lead">Portale per la georeferenzazione</p>
-            
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6">
+                    <br />
+                    <br />
+                    <img width="400" height="200" src="/Images/geocoding_02.png">
+                    <!--  <div class="row-cols-2">-->
+                </div>
+                <div class="col-sm-6">
+                    <p> <b>PortaleGeoWeb</b> è un portale messo a disposizione da Regione Marche che permette di georeferenziare luoghi di lavoro, sanità ,istruzione e anche strutture private a partire da informazioni primarie come Provincia, Comune e Indirizzo con lo scopo di migliorare le qualità di vita e sociali di tali strutture.</p>
+
+                    <p>La Georeferenzazione è basata su tre sistemi in particolare:</p>
+                    <ul><b>OpenStreetMap:</b>INFO</ul>
+                    <ul><b>SistemareHere:</b>INFO</ul>
+                    <ul><b>GoogleMaps:</b>INFO</ul>
+                    <p>
+                        Il portale è in grado di leggere file csv  con relatvi informazioni su Indirizzo, Comune, Provincia ecc.. . Tramite i tre sistemi di Georeferenzazioni sopra elencati è in grado di restituirci un nuovo file csv in cui sono state aggiunte informazioni su LATITUDINE e LONGITUDINE
+                        Infatti proprio grazie a queste due ultime importanti parametri siamo in grado di visualizzare su mappa i luoghi interessati alla geocodifica.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
         <a class="btn-group-lg" href="/Home/About"><strong>Informazioni</strong></a>
     </div>
 
-  
+
 </body>
 </html>
