LS-progressione datatable

--- a/PortaleGeo/Views/Home/Upload.cshtml
+++ b/PortaleGeo/Views/Home/Upload.cshtml
@@ -246,9 +246,9 @@
                                     $('#seleziona').show();
                                 } else {
                                     $('#seleziona').hide();
-                                    $("#Here").val(false);
-                                    $("#OpenStreetMap").val(false);
-                                    $("#Google").val(false);
+                                    $("#Here").val()== "False";
+                                    $("#OpenStreetMap").val()=="False";
+                                    $("#Google").val()=="False";
                                 }
                             });
         const dropdownlist = document.getElementById('OpenStreetMap')
